:bug: Fix to collapse top menu smoothly on Gallery page

--- a/public/stylesheets/gallery_v.css
+++ b/public/stylesheets/gallery_v.css
@@ -76,6 +76,7 @@ span.search-close:hover {
 div.gallery-wrapper {
     margin-left: auto;
     margin-right: auto;
+    position: relative;
 }
 
 div.photo-wrapper {
